Pseudo class active on emojis.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="buttons">
-        <button class="rock">Rock</button>
-        <button class="paper">Paper</button>
-        <button class="scissors">Scissors</button>
+    <div class="title">
+        <h1>Rock Paper scissors</h1>
     </div>
-    <div class="scores">
-        <p class="computer"></p>
-        <p class="user"></p>
+    <div class="content">
+        <div class="scores">
+            <div class="computer-badge">Computer</div>
+            <div class="user-badge">User</div>
+            <span class="computer">0</span>:<span class="user">0</span>
+        </div>
+        <div class="results"></div>
+        <div class="buttons">
+            <button class="rock">✊</button>
+            <button class="paper">✋</button>
+            <button class="scissors">✌️</button>
+        </div>
     </div>
-    <div class="results"></div>
 </body>
 </html>
