Button to restart the game

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="scores">
             <div class="computer-badge">Computer</div>
             <div class="user-badge">User</div>
-            <span class="computer">0</span>:<span class="user">0</span>
+            <span class="computer"></span>:<span class="user"></span>
         </div>
         <div class="results"></div>
         <div class="buttons">
